--- a/code/src/index.css
+++ b/code/src/index.css
@@ -22,7 +22,7 @@ code {
 }
 
 .message-container {
-  background: whitesmoke;
+  background:rgb(234, 255, 253);
 }
 
 .message-container,
@@ -33,10 +33,11 @@ code {
   box-shadow: black 0 2px 5px 0;
   font-family: "Courier New";
   font-size: 16px;
+  border-radius: 10px;
 }
 
 .submit-message-container {
-  background-color: rgb(240, 255, 255);
+  background-color: rgb(253, 213, 255);
   font-family: "Courier New";
   font-weight: 600;
   font-size: 16px;
@@ -48,7 +49,7 @@ code {
 }
 
 .button-submit {
-  background-color: rgba(207, 255, 160, 0.969);
+  background-color: rgb(143, 253, 255);
   border: none;
   border-radius: 45px;
   width: 70%;
@@ -59,11 +60,11 @@ code {
 }
 
 .button-submit:hover {
-  background-color: rgb(237, 255, 231);
+  background-color: rgb(176, 254, 203);
 }
 
 .button-likes{
-  background-color: rgb(241, 239, 239);
+  background-color: white;
   border: none;
   border-radius: 50%;
   width: 35px;
@@ -73,7 +74,7 @@ code {
 }
 
 .button-likes:hover {
-  background-color: rgb(255, 149, 149);
+  background-color: rgb(253, 213, 255);
 }
 
 .message-input {
@@ -98,7 +99,7 @@ code {
 }
 
 .heart-red {
-  color: red;
+  color: rgb(251, 154, 228);
 }
 
 .hearts-likes-wrapper {
