--- a/code/src/index.css
+++ b/code/src/index.css
@@ -22,8 +22,7 @@ code {
 }
 
 .message-container {
-  background-color:rgb(234, 255, 253);
-  background-image: linear-gradient(bottom to left, rgb(253, 213, 255), rgb(176, 254, 203), rgb(143, 253, 255));
+  background:rgb(234, 255, 253);
 
 }
 
