--- a/code/src/index.css
+++ b/code/src/index.css
@@ -165,7 +165,72 @@ p {
   font-family: 'Inconsolata', monospace;
   font-size: 14px;
   color: red;
-  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+/** LOADING STATE **/
+.lds-heart-container {
+  display: flex;
+  justify-content: center;
+}
+
+.lds-heart {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  transform: rotate(45deg);
+  transform-origin: 40px 40px;
+}
+
+.lds-heart div {
+  top: 32px;
+  left: 32px;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background: #fff;
+  animation: lds-heart 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.lds-heart div:after, .lds-heart div:before {
+  content: " ";
+  position: absolute;
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: #fff;
+}
+
+.lds-heart div:before {
+  left: -24px;
+  border-radius: 50% 0 0 50%;
+}
+
+.lds-heart div:after {
+  top: -24px;
+  border-radius: 50% 50% 0 0;
+}
+
+@keyframes lds-heart {
+  0% {
+    transform: scale(0.95);
+  }
+  5% {
+    transform: scale(1.1);
+  }
+  39% {
+    transform: scale(0.85);
+  }
+  45% {
+    transform: scale(1);
+  }
+  60% {
+    transform: scale(0.95);
+  }
+  100% {
+    transform: scale(0.9);
+  }
 }
 
 
@@ -221,14 +286,14 @@ p {
 .message-heart-counter {
   font-family: 'Inconsolata', monospace;
   font-size: 14px;
-  color: rgb(153,153,153);
+  color: rgb(61, 59, 59);
   padding: 15px;
 }
 
 .message-date {
   font-family: 'Inconsolata', monospace;
   font-size: 14px;
-  color: rgb(153,153,153);
+  color: rgb(61, 59, 59);
   padding: 15px 0px;
   margin-left: auto;
 }
