changed some styling of buttnons

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -61,6 +61,10 @@ code {
   font-weight: bold;
 }
 
+.send-thought-button:hover {
+  transform: scale(1.2);
+}
+
 .card-container {
   display: grid;  
   width: 300px;  
