--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: thistle;
 }
 
 code {
@@ -92,6 +93,7 @@ button {
 
 .thought-card {
   overflow-wrap: break-word;
+  background-color: white;
 }
 
 .card-info {
@@ -131,4 +133,15 @@ button {
 
 .post-time {
   opacity: 0.4;
+}
+
+.delete-btn {
+  width: 50px;
+  height: 50px;
+  background-color: transparent;
+  font-size: 26px;
+}
+
+.delete-btn:hover {
+  cursor: pointer;
 }
