--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,3 @@
-
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,7 +8,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
 }
 
 code {
@@ -20,28 +17,27 @@ code {
 
 h4 {
   margin: 0;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 p {
   margin: 0;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 12px;
 }
 
 label {
   margin-bottom: 15px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 12px;
   font-weight: bold;
 }
-
 
 .chat-containers {
   position: relative;
   display: flex;
   flex-direction: column;
-  border: 1px solid rgb(0, 0, 0) ;
+  border: 1px solid rgb(0, 0, 0);
   width: 70vw;
   margin-bottom: 25px;
   box-shadow: 7px 7px #000;
@@ -59,7 +55,7 @@ label {
   outline: none;
   box-sizing: border-box;
   padding: 10px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .send-message-button {
@@ -70,7 +66,7 @@ label {
   justify-content: space-evenly;
   background-color: #ffadae;
   border-radius: 25px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   padding: 10px;
   margin-top: 15px;
   width: 200px;
@@ -91,11 +87,12 @@ label {
 }
 
 .number-of-likes {
-  width: 20%;
+  margin-left: 10px;
+  width: 5%;
 }
 
 .date {
-  width: 65%;
+  width: 85%;
   text-align: right;
 }
 
@@ -105,15 +102,19 @@ label {
   width: 35px;
   margin: 10px 5px 10px 0;
   border-radius: 50%;
-  background-color: #ffadae; 
+  background-color: #ffadae;
+}
+
+.delete-button {
+  border: none;
+  height: 35px;
+  width: 35px;
+  margin: 10px 5px 10px 5px;
+  border-radius: 50%;
+  background-color: rgb(240, 240, 240);
 }
 
 .like-heart {
-  vertical-align: middle; 
-  text-align: center; 
+  vertical-align: middle;
+  text-align: center;
 }
-
-
-
-
-
