--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,5 @@
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Roboto Mono', monospace;
@@ -10,14 +7,12 @@ body {
 
 * {
     box-sizing: border-box;
-
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
 
 .form-container {
   display: flex;
@@ -58,7 +53,25 @@ code {
   margin: 40px 20px;
   padding: 10px 5px 20px 10px;
   overflow-wrap: break-word;
+}
 
+.msg-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn-delete {
+  font-family: 'Roboto Mono', monospace;
+  font-size: 10px;
+  color: grey;
+  padding: 5px;
+  border: 1px solid rgba(245, 136, 136, 0.39);
+  border-radius: 15%;
+  background-color: rgb(250, 211, 217);
+  height: 25px;
+  cursor: pointer;
+  margin-right: 10px;
 }
 
 h3 {
@@ -101,7 +114,6 @@ p {
 }
 
 @media screen and (min-width: 700px) {
-
   .message {
     padding: 20px 20px;
     max-width: 700px;
@@ -118,6 +130,4 @@ p {
     margin-top: 40px;
 
   }
-
-
 }
