--- a/code/src/index.css
+++ b/code/src/index.css
@@ -10,7 +10,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(148,187,233,1) 0%, rgb(238, 174, 179) 100%);
 }
 
 code {
@@ -23,8 +24,6 @@ code {
   flex-direction: column;
   align-items: center;
   /* background-image: radial-gradient(#ffadad, #ffe2e2); */
-  background: rgb(238,174,202);
-  background: radial-gradient(circle, rgba(148,187,233,1) 0%, rgb(238, 174, 179) 100%);
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -36,6 +35,12 @@ code {
   padding: 30px;
   margin: 30px 0;
   box-shadow: 12px 13px 0px -4px #000;
+}
+
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .header-container {
@@ -63,16 +68,31 @@ code {
   width: 100%;
 }
 
+.name-input-label, .hashtag-input-label {
+  font-size: 2rem;
+}
+
+.name-input, .hashtag-input {
+  width: 40%;
+  height: 30px;
+  margin: 5px 0 20px 0;
+  padding: 5px;
+  font-size: 2rem;
+  font-family: 'Inconsolata', monospace;
+}
+
 .post-message-label {
   margin: 0;
   font-size: 2.4rem;
 }
 
 .post-message-textarea {
-  width: 99%;
+  width: 95%;
   height: 70px;
-  margin: 30px 0;
+  margin: 10px 0 30px 0;
   padding: 10px;
+  font-size: 2rem;
+  font-family: 'Inconsolata', monospace;
 }
 
 .btn-container {
@@ -89,6 +109,7 @@ code {
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   background-color: #FFADAD;
+  cursor: pointer;
 }
 
 .btn-container p {
@@ -100,9 +121,24 @@ code {
   width: 100%;
 }
 
+.message-user {
+  font-size: 1.6rem;
+  font-style: italic;
+}
+
+.message-hashtag {
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
 .message-text {
   font-family: 'Inconsolata', monospace;
   font-size: 2.4rem;
+  font-weight: 600;
+}
+
+.chars-overstep {
+  color: red;
 }
 
 .message-container-footer {
@@ -122,6 +158,7 @@ code {
   width: 50px;
   background-color: #FFADAD;
   margin-right: 20px;
+  cursor: pointer;
 }
 
 .like-btn.zero {
