--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #ffafad;
 }
 
 code {
@@ -16,7 +17,7 @@ code {
 .new-message-form {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 40%;
   border: 2px solid black;
   padding: 20px;
   margin: 0 auto;
@@ -26,9 +27,8 @@ code {
 }
 
 .new-message-input {
-  margin: 10px;
+  margin: 10px 10px 10px 0;
   background-color: white;
-  /* overflow: hidden; */
 }
 
 .submit-btn {
@@ -38,17 +38,18 @@ code {
   justify-content: left;
   width: 60%;
   padding: 10px;
-  margin-left: 2%;
+  font-weight: bold;
 }
 
 /* THOUGHT CARD */
 .thought-div {
   border: 2px solid black;
-  width: 80%;
+  width: 40%;
   padding: 20px;
   margin: 0 auto;
   margin-top: 30px;
   box-shadow: 5px 5px 0px 0px #000000;
+  background-color: white;
 }
 
 .heart-time-div {
