--- a/code/src/index.css
+++ b/code/src/index.css
@@ -86,13 +86,44 @@ code {
   font-size: 2.4rem;
 }
 
-.post-message-textarea {
+.message-wrapper {
+  display: flex;
+}
+
+.textarea-wrapper {
+  position: relative;
   width: 95%;
-  height: 70px;
+  min-width: 65%;
+}
+
+
+.post-message-textarea {
+  box-sizing: border-box;
+  width: 100%;
+  height: 200px;
   margin: 10px 0 30px 0;
   padding: 10px;
+  padding-right: 60px;
   font-size: 2rem;
   font-family: 'Inconsolata', monospace;
+}
+
+.emoji-btn {
+  position: absolute;
+  z-index: 1;
+  top: 15px;
+  right: 5px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  font-size: 2rem;
+  border: none;
+  background-color: #FFADAD;
+  cursor: pointer;
+}
+
+.emoji-btn:hover {
+  background-color: #fcc8c8
 }
 
 .btn-container {
@@ -112,6 +143,10 @@ code {
   cursor: pointer;
 }
 
+.post-message-btn:hover {
+  background-color: #fcc8c8;
+}
+
 .btn-container p {
   font-size: 1.8rem;
   color: #afafaf;
@@ -129,6 +164,11 @@ code {
 .message-hashtag {
   font-size: 1.4rem;
   font-weight: 500;
+}
+
+.message-hashtag:hover, .message-user:hover {
+  cursor: pointer;
+  color: #b3b1b1;
 }
 
 .message-text {
@@ -161,8 +201,16 @@ code {
   cursor: pointer;
 }
 
-.like-btn.zero {
+.like-btn:hover {
+  background-color: #fcc8c8;
+}
+
+.like-btn.no-hearts {
   background-color: #EAEAEA;
+}
+
+.like-btn.no-hearts:hover {
+  background-color: #b3b1b1;
 }
 
 .heart-emoji {
