--- a/code/src/index.css
+++ b/code/src/index.css
@@ -19,8 +19,8 @@ main {
   border: 1px solid black;
   box-shadow: 5px 5px;
   margin: 30px 15px;
-  line-height: 1.5em;
-  padding: 0 11px;
+  line-height: 1rem;
+  padding: 0 20px;
 }
 
 /*** Form ***/ 
@@ -38,6 +38,11 @@ main {
   border: inherit;
 }
 
+.name-input {
+  line-height: 2em;
+  width: 50%;
+}
+
 .send-btn {
   width: 50%;
   padding: 8px;
@@ -46,6 +51,7 @@ main {
   border-radius: 20px;
   background-color: #f09d9d; 
   font-size: 12px;
+  cursor: pointer;
 }
 
 .button-after {
@@ -62,6 +68,48 @@ main {
 @keyframes backgroundchange {
   from {background-color: rgb(240, 239, 239);}
   to {background-color: #f09d9d;}
+}
+
+/*** Pagination Btn ***/
+.pagination-btn-container {
+  margin: 30px 15px;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+.pagination-btn {
+  padding: 11px;
+  margin: 0 10px;
+  width: 100px;
+  border: none;
+  border-radius: 7px;
+  font-family: 'Trispace', sans-serif;
+  font-size: 12px;
+  background-color: #f09d9d;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.pagination-btn::after {
+  content: "";
+  background-color: #ffffff;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px!important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s;
+}
+
+.pagination-btn:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s
 }
 
 /*** Messagelist ***/ 
@@ -95,6 +143,7 @@ main {
   align-items: center;
   margin-right: 10px;
   background-color: rgb(207, 204, 204);
+  cursor: pointer;
 }
 
 .heart-button-clicked {
