--- a/code/src/index.css
+++ b/code/src/index.css
@@ -112,6 +112,14 @@ button {
 .heart-btn {
   height: 44px;
   width: 44px;
+  cursor: pointer;
+}
+
+.delete-btn {
+  width: 44px;
+  height: 44px;
+  margin-left: auto;
+  cursor: pointer;
 }
 
 .heart-btn span {
