--- a/code/public/style.css
+++ b/code/public/style.css
@@ -73,6 +73,8 @@ button:focus{
   border: 2px solid black;
   box-shadow: 8px 8px black;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   width: 80%;
 }
 
