--- a/code/src/index.css
+++ b/code/src/index.css
@@ -18,7 +18,7 @@ body {
 /*********** HEADER ***********/
 
 .header-wrapper {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   text-align: center;
 }
 
@@ -31,7 +31,7 @@ body {
 .twitter-info {
   letter-spacing: 1px;
   font-size: 1rem;
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
 }
 
 .thought-bubble {
@@ -46,7 +46,7 @@ body {
 /*********** NEW MESSAGE FORM ***********/
 
 .message-box {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 0.8rem;
   border: 1.6px solid #6d6c6c;
   display: flex;
@@ -65,7 +65,7 @@ body {
   margin: 1rem 0 1rem 0;
   height: 3.5rem;
   border: 1px solid #adadab;
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
   font-size: 0.8rem;
   font-weight: bold;
   color: #3f3e3e;
@@ -75,7 +75,7 @@ body {
 }
 
 .send-button {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 0.8rem;
   font-weight: bold;
   letter-spacing: 1px;
@@ -89,18 +89,18 @@ body {
 }
 
 .send-button:hover {
-  font-size: 0.85rem;
   background: #fa8589;
+  color: white;
 }
 
 .post-heart {
   margin: 4px;
-} 
+}
 
 /*********** MESSAGES LIST ***********/
 
 .messagelist-box {
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
   font-size: 0.8rem;
   border: 1.5px solid #6d6c6c;
   display: flex;
@@ -108,7 +108,7 @@ body {
   margin: 1rem;
   width: 22rem;
   box-shadow: 6.5px 6.5px black;
-  background: #FFFFFF;
+  background: #ffffff;
   padding: 1rem;
   font-weight: bold;
   letter-spacing: 1px;
@@ -140,14 +140,18 @@ body {
   outline: none;
 }
 
+.like-button:hover {
+  background: #fa8589;
+}
+
 .like-heart {
   margin-left: 0.35rem;
 }
 
 .x-operator {
-  margin: 0 0.2rem 0 1.5rem; 
+  margin: 0 0.2rem 0 1.5rem;
   font-size: 0.8rem;
-  color: #8c8b8b
+  color: #8c8b8b;
 }
 
 .liked {
@@ -164,8 +168,9 @@ body {
 /*********** MESSAGES LIST ANIMATION ***********/
 
 .messagelist-box {
-	-webkit-animation: messagelist-box 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	animation: messagelist-box 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  -webkit-animation: messagelist-box 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
+    both;
+  animation: messagelist-box 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 @-webkit-keyframes messagelist-box {
@@ -192,12 +197,11 @@ body {
 /*********** MEDIA QUARY DESKTOP ***********/
 
 @media only screen and (min-width: 1200px) {
-
   .title {
     font-size: 3.5rem;
   }
 
-  .twitter-info {  
+  .twitter-info {
     font-size: 1.3rem;
   }
 
@@ -208,9 +212,10 @@ body {
 
   .summoning {
     font-size: 2rem;
-  } 
+  }
 
-  .message-box, .messagelist-box {
+  .message-box,
+  .messagelist-box {
     width: 32rem;
     font-size: 1.1rem;
     border: 2.5px solid #8f8f91;
@@ -224,7 +229,7 @@ body {
   .input-field {
     font-size: 1.1rem;
     border: 2px solid #c9c9c7;
-    margin-left: 0.2rem; 
+    margin-left: 0.2rem;
     margin-right: 0.2rem;
   }
 
