--- a/code/src/index.css
+++ b/code/src/index.css
@@ -22,13 +22,17 @@ code {
   align-items: center;
 }
 
-/**********FORM***********/
+nav {
+  text-align: center;
+}
 
+/**********FORM***********/
 .form,
 .thought-card
 {
   border: 3px solid darkgray;
-  margin: 30px;
+  box-sizing: border-box;
+  margin: 30px 10px;
   width: 400px;
   padding: 16px;
   box-shadow: 8px 8px black;
