--- a/code/src/components/Loading.css
+++ b/code/src/components/Loading.css
@@ -11,10 +11,10 @@
   width: 64px;
   height: 64px;
   margin: 8px;
-  border: 8px solid white;
+  border: 8px solid #FFADAD;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: white transparent transparent transparent;
+  border-color: #FFADAD transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
@@ -39,5 +39,4 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
 }
