--- a/code/src/index.css
+++ b/code/src/index.css
@@ -43,7 +43,7 @@
 	border: none;
 	border-radius: 25px;
 	font-size: 14px;
-	padding: 10px 15px;
+	padding: 10px;
 	cursor: pointer;
 	margin-top: 10px;
 }
