--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,185 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	padding: 0 auto;
+	margin: 0 auto;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	
+	font-weight: 500;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
+
+.container {
+	padding: 15px 15px;
+
+	display: grid;
+	grid-template-columns: 1fr;
+	justify-content: center;
+	grid-gap: 25px;
+	background-color: rgb(255, 255, 255);
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Make a post area */
+
+.contentTextArea {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+
+	background-color: rgb(242, 240, 240);
+	border: rgb(0, 0, 0) 1px solid;
+	border-radius: 1%;
+	box-shadow: 12px 12px 1px -5px black;
+	width: 95%;
+	max-width: 450px;
+	height: 140px;
+	white-space: normal;
+	word-break: normal;
+	padding: 10px 10px;
+	font-size: 15px;
+	font-weight: 700;
+}
+
+.TextArea {
+	display: flex;
+	justify-content: center;
+	height: 40px;
+	margin: 5px 5px 15px 0px;
+	
+	
+
+	
+}
+textarea {
+	background-color: rgb(255, 255, 255);
+	width: 100%;
+	height: 90%;
+	border: lightgray 1.5px solid;
+	resize: none;
+	overflow: hidden;
+    overflow-wrap: break-word;
+padding: 7px 0 7px 7px;
+font-family: monospace;
+font-weight: 600;
+font-size: 13px;
+letter-spacing: 2px;
+
+
+
+
+}
+textarea:focus {
+	border: none;
+	border: rgb(185, 184, 184) 2px solid;
+	outline: none;
+	
+  }
+
+  textarea:focus:invalid {
+	outline: none;
+	border: rgb(185, 184, 184) 2px solid;
+	background: url("https://assets.digitalocean.com/labs/icons/exclamation-triangle-fill.svg") no-repeat 95% 50% rgb(255, 255, 255);
+	background-size: 25px;
+	
+  }
+
+
+
+.PostBtn {
+	background-color: rgb(255, 173, 173);
+	border: none;
+	border-radius: 100px;
+	padding: 9px 15px;
+	font-size: 13px;
+	font-weight: 600;
+	cursor: pointer;
+	margin: 10px 0;
+
+}
+.PostBtn:hover {
+	background-color: rgb(245, 150, 150);
+}
+
+
+
+
+
+
+/* Message container  */
+
+.messageContainer {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto;
+	grid-gap: 25px;
+	align-items: center;
+	justify-items: center;
+	width: 100%;
+	
+}
+.content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+
+	border: rgb(0, 0, 0) 1px solid;
+	box-shadow: 12px 12px 1px -5px black;
+	width: 95%;
+	max-width: 450px;
+	height: 100px;
+	padding: 5px 10px 15px 15px;
+	font-size: 17px;
+	font-family: monospace;
+	font-weight: 600;
+	line-height: 20px;
+	color: #37352f;
+	
+
+}
+
+.like{
+	padding-bottom: -10px;
+font-size: 12px;
+	color: rgb(170, 168, 168);
+	font-family: sans-serif;
+font-weight: 100;
+
+}
+
+.icon{
+
+
+	background-color: rgb(255, 173, 173);
+	border-radius: 100px;
+	padding: 10px;
+	margin-bottom: 5px;
+	font-size: 0.7em;
+	cursor: pointer;
+}
+
+.icon:hover{
+	background-color: whitesmoke;
+
+
+}
+
