main design and first fetch

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -5,9 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(34,193,195);
+  background: linear-gradient(0deg, rgba(34,193,195,1) 54%, rgba(253,187,45,1) 100%);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+.main-container{
+  background: rgb(200, 227, 212);
+  width: 70%;
+  margin: 0 auto;
+  height: auto;
 }
