--- a/code/src/Card/card.css
+++ b/code/src/Card/card.css
@@ -1,5 +1,5 @@
 .card-container {
-    width: 50%;
+    width: 80%;
     height: auto;
     margin: 50px auto;
     background:rgb(240, 223, 128);
@@ -9,4 +9,16 @@
     justify-content: center;
     align-items: center;
     box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px, rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px, rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;
+}
+
+@media (min-width: 768px) {
+.card-container {
+    width: 70%;
+    }
+}
+
+@media (min-width: 992px) {
+.card-container {
+    width: 50%;
+    }
 }
