--- a/code/src/Header/header.css
+++ b/code/src/Header/header.css
@@ -1,6 +1,5 @@
 .header-content{
     width: 100%;
-    /* background: rgb(51, 71, 86); */
     background: rgb(135, 170, 170);
     height: 200px;
     display: flex;
@@ -12,9 +11,10 @@
 }
 
 .header-text{
-    /* color:  rgb(240, 165, 0); */
     color: rgb(246, 215, 167);
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    margin: 10px;
+    text-align: center;
 }       
 
 
