--- a/code/src/components/ThoughtsList/ThoughtsList.css
+++ b/code/src/components/ThoughtsList/ThoughtsList.css
@@ -1,13 +1,10 @@
 .thoughts__container {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .thoughts__thought-container {
   width: 400px;
-  height: 120px;
+  height: 150px;
   margin: 10px;
   padding: 20px;
   border: 1px solid black;
@@ -25,7 +22,7 @@
 
 .icon__heart {
   color: red;
-  background-color: rgb(228, 226, 226);
+  border: 1px solid black;
   border-radius: 50%;
   height: 40px;
   width: 40px;
