--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Courier New', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -10,4 +10,60 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+p, label, button {
+  letter-spacing: 0.1em;
+  font-weight: 600;
+}
+
+.mainContainer {
+  min-width:992px;
+  width:60vw;
+  margin:0 auto;
+  margin-top:20px;
+}
+
+.newThought, .posted-thoughts {
+  border:1px solid black;
+  width:500px;
+  margin:0 auto;
+  padding:20px;
+  margin-bottom:40px;
+  border-radius: 2px;
+  box-shadow:8px 8px 0px black;
+}
+
+.newThought {
+  display:flex;
+  flex-direction: column;
+  background:#E1DCDC;
+}
+
+.newThought label {
+  margin-bottom:10px;
+  font-weight: 700;
+}
+
+.newThought button {
+  background:#FF8A8A;
+  border:none;
+  padding:10px 10px;
+  border-radius: 20px;
+  margin-top:20px;
+  cursor: pointer;
+  width:250px;
+}
+
+.newThought button:hover {
+  background:#d87474;
+  transition: .2s;
+}
+
+.posted-thoughts button {
+  border:none;
+  height:50px;
+  width:50px;
+  border-radius: 25px;
+  text-align: center;
 }
