--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --highlight: rgb(208, 51, 77);
+  --background-color: rgb(199, 199, 199);
+  --theme-color: rgb(179, 176, 176);
+  --font-color: #3e3c3c;
+  --shadow: black;
+  --fancy: rosybrown;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: var(--font-color);
+}
+
+.loading-screen {
+  width: 100vw;
+  height: 100vh;
+}
+
+.hide-content {
+  display: none;
+}
+
+.highlight {
+  color: var(--highlight);
+  font-weight: 500;
+}
+
+input {
+  outline: none;
+  text-decoration: none;
+  color: var(--fancy);
 }
