--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,56 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.form-container {
+  background-color: rgb(240, 240, 240);
+  border: 1px solid black;
+  max-width: 500px;
+  margin: 30px auto;
+  padding: 30px;
+  box-shadow: 10px 10px;
+}
+textarea {
+  display: block;
+  resize: none;
+  height: 80px;
+  width: 100%;
+  margin: 20px 0;
+}
+.send-button {
+  background-color: lightpink;
+  border: none;
+  border-radius: 30px;
+  height: 40px;
+  width: 200px;
+}
+.send-button:hover {
+  background-color: lightsalmon;
+}
+
+.thought-container {
+  border: 1px solid black;
+  max-width: 500px;
+  margin: 30px auto;
+  padding: 30px;
+  box-shadow: 10px 10px;
+}
+.thought-message {
+  margin: 0 0 30px 5px;
+}
+.thought-info {
+  display: flex;
+  justify-content: space-between;
+}
+.heart-button {
+  background-color: lightpink;
+  border: none;
+  border-radius: 100%;
+  height: 40px;
+  width: 40px;
+}
+span {
+  color: grey;
+}
+.date {
+  color: grey;
+}
