--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,107 @@
 body {
-  margin: 0;
+  margin: auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 2rem;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+body {
+  font-family: roboto mono;
+  font-weight: 400;
+}
+
+button {
+  -webkit-appearance: none;
+  -moz-apperance: none;
+  border: none;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 330px;
+  background-color: #F2F0F0;
+  padding: 1rem;
+  border: 1px solid #333;
+  box-shadow: 8px 8px  #333;
+  margin-bottom: 1rem;
+  border-radius: 2px;
+  margin-bottom: 2rem;
+}
+
+input {
+  -webkit-appearance: none;
+  -moz-apperance: none;
+  border: none;
+}
+
+.text-input {
+  min-height: 56px;
+  border: 1px solid #c7c7c7;
+  border-radius: 2px;
+  padding-left: 0.5rem;
+}
+
+.input-label {
+  margin-bottom: 0.5rem;
+}
+
+.btn-send {
+  background-color: #F3B1AF;
+  border-radius: 24px;
+  height: 48px;
+  margin-top: 1rem;
+  font-size: 1rem;
+}
+
+.thought-item {
+  width: 330px;
+  background-color: #fff;
+  padding: 1rem;
+  border: 1px solid #7A7979;
+  box-shadow: 8px 8px  #333;
+  margin-bottom: 2rem;
+  border-radius: 2px;
+}
+
+.btn {
+  -webkit-appearance: none;
+  -moz-apperance: none;
+  border: none;
+  background: none;
+  margin: 0;
+  padding: 0;
+  color: #999;
+}
+
+.btn-heart {
+  background-color: #eee;
+  padding: 1rem;
+  border-radius: 50%;
+  margin: 0;
+  font-size: 1rem;
+}
+
+.likesAndTime {
+  display: flex;
+  flex-direction: flex;
+  justify-content: space-between;
+}
+
+.thought-message {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  margin-top: 0;
+}
+
+.time {
+  color: #999;
 }
