--- a/code/src/index.css
+++ b/code/src/index.css
@@ -35,6 +35,7 @@ textarea {
 }
 .send-button:hover {
   background-color: lightsalmon;
+  transform: scale(1.05);
 }
 
 .thought-container {
@@ -57,6 +58,10 @@ textarea {
   border-radius: 100%;
   height: 40px;
   width: 40px;
+}
+.heart-button:hover {
+  background-color: lightsalmon;
+  transform: scale(1.1);
 }
 span {
   color: grey;
