--- a/code/src/index.css
+++ b/code/src/index.css
@@ -14,7 +14,7 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	/* box-sizing: border-box; */
 }
 
 body {
@@ -26,8 +26,9 @@ body {
 
 .thought-container,
 .new-thought-container {
+	box-sizing: border-box;
 	max-width: 520px;
-	margin: 45px 45px;
+	margin: 40px 25px;
 	padding: 20px;
 	border: solid #000000 2px;
 	box-shadow: 10px 10px 0px -2px #000000;
@@ -48,6 +49,12 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	flex-wrap: wrap;
+	margin-top: 8px;
+}
+
+.like-counter {
+	margin-right: 10px;
 }
 
 .like-btn {
@@ -57,11 +64,10 @@ body {
 	cursor: pointer;
 	display: flex;
 	align-items: center;
-	margin-top: 8px;
 }
 
 .heart-icon-container {
-	font-size: 20px;
+	font-size: 21px;
 	background-color: #e9e9e9;
 	width: 52px;
 	height: 52px;
@@ -72,6 +78,6 @@ body {
 	margin-right: 7px;
 }
 
-.heart-icon {
-	font-size: 21px;
-}
+/* .time-info {
+	margin-top: 10px;
+} */
