--- a/code/src/index.css
+++ b/code/src/index.css
@@ -22,8 +22,20 @@ form {
   justify-content: left;
 }
 
-input {
+textarea {
   border: 0;
+  padding: 1em;
+  margin: 1em;
+}
+
+button {
+  padding: 0.5em;
+  border: dotted;
+}
+
+label {
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .main-container {
