--- a/code/src/index.css
+++ b/code/src/index.css
@@ -13,9 +13,9 @@ code {
 }
 
 .main-container {
+  font-family: "Roboto Mono", monospace;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 }
 
@@ -25,7 +25,7 @@ code {
   background-color: rgb(240, 239, 239);
   border: 1px solid black;
   padding: 10px;
-  box-shadow: 0px, 5px, 5px, 0px black;
+  box-shadow: 5px 5px;
 }
 
 .input {
@@ -37,6 +37,7 @@ code {
 }
 
 .submit-button {
+  width: fit-content;
   border: none;
   background-color: rgb(245, 177, 169);
   border-radius: 20px;
@@ -51,13 +52,4 @@ code {
 
 .submit-button-text {
   margin: 0;
-}
-
-.thought-container {
-  display: flex;
-  flex-direction: column;
-  /* background-color: rgb(240, 239, 239); */
-  border: 1px solid black;
-  padding: 10px;
-  box-shadow: 0px, 5px, 5px, 0px black;
 }
