Added a favicon to the page

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -23,6 +23,7 @@ body {
 	font-size: 18px;
 	line-height: 25px;
 	background-color: #f3b1af;
+	/* background-color: #f2f0f0; */
 }
 
 .thought-container,
